[gd_scene load_steps=14 format=3 uid="uid://cla1uqq22m1of"]

[ext_resource type="Script" path="res://PlayerAgent.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://4gg0i7eymyfj" path="res://ball_token.tscn" id="2_1wyo2"]
[ext_resource type="PackedScene" uid="uid://cb7hvn8h0s4q2" path="res://blob_token.tscn" id="5_qdm8j"]
[ext_resource type="FontFile" uid="uid://dmi84odllf8ul" path="res://assets/Kenney Pixel.ttf" id="6_afsd1"]
[ext_resource type="Texture2D" uid="uid://c5m3c44238wyx" path="res://assets/x-marker.png" id="6_b5lfw"]

[sub_resource type="LabelSettings" id="LabelSettings_luuu8"]
font = ExtResource("6_afsd1")
font_size = 46
font_color = Color(1, 1, 1, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3hrv"]
atlas = ExtResource("6_b5lfw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqbs3"]
atlas = ExtResource("6_b5lfw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv2to"]
atlas = ExtResource("6_b5lfw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7xqd"]
atlas = ExtResource("6_b5lfw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps2re"]
atlas = ExtResource("6_b5lfw")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl47u"]
atlas = ExtResource("6_b5lfw")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pmhvp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3hrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqbs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv2to")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7xqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps2re")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl47u")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[node name="Node2D" type="Node2D"]
script = ExtResource("1")

[node name="KickCursor" parent="." instance=ExtResource("2_1wyo2")]

[node name="InstructionLabel" type="Label" parent="."]
offset_left = 9.0
offset_top = 7.0
offset_right = 259.0
offset_bottom = 42.0
text = "Instruction Label"
label_settings = SubResource("LabelSettings_luuu8")

[node name="PlaceCursor" parent="." instance=ExtResource("5_qdm8j")]
modulate = Color(1, 1, 1, 0.603922)
animation = &"green_dangle"

[node name="RemoveCursor" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.72549)
sprite_frames = SubResource("SpriteFrames_pmhvp")
frame = 5
frame_progress = 1.0
